--- a/sass/partials/_achievement.scss
+++ b/sass/partials/_achievement.scss
@@ -27,12 +27,6 @@
     width: 100%;
     border: 10px solid black;
   }
-  @media (hover: hover) and (pointer: fine) {
-    &:hover .project-details {
-      opacity: 1;
-      transform: translateY(-100%);
-    }
-  }
 
   @media screen and (min-width: 500px) {
     width: 60%;
@@ -45,6 +39,13 @@
   }
   @media screen and (min-width: 1430px) {
     width: 20%;
+  }
+}
+
+@media (hover: hover) and (pointer: coarse) {
+  .project:hover .project-details {
+    opacity: 1;
+    transform: translateY(-100%);
   }
 }
 
